# fastapidemo

./: .gitignore  Dockerfile  Dockerfile_v2  docker-compose.yaml  pyproject.toml
api/cruds/: done.py  task.py
api/routers/: task.py
api_v2/: db.py  main.py
api_v2/cruds/: movie.py  task.py
api_v2/models/: movie.py
api_v2/routers/: movie.py  task.py
api_v2/schemas/: movie.py
tests/: test_main.py
